# GUI-Calculator-CPlusPlus

./: .gitignore  CMakeLists.txt  Calc.sln  README.md
Calc/: BasicMath.cpp  BasicMath.h  Calc.vcxproj  GUI.cpp  GUI.h  Main.cpp  Main.h
src/: BasicMath.cpp  BasicMath.h  Calc.vcxproj.filters  GUI.cpp  GUI.h  Main.cpp  Main.h
